@@ -29,6 +29,7 @@
 
 using System.Drawing;
 using System.Collections;
+using System.Collections.Generic;
 using System.ComponentModel;
 using System.Windows.Forms.Layout;
 
@@ -193,11 +194,11 @@ namespace System.Windows.Forms
 			if (key == null)
 				throw new ArgumentNullException ("key");
 
-			ArrayList al = new ArrayList ();
+			List<ToolStripItem> list = new List<ToolStripItem> ();
 
 			foreach (ToolStripItem tsi in this) {
 				if (tsi.Name == key) {
-					al.Add (tsi);
+					list.Add (tsi);
 
 					if (searchAllChildren) {
 						// TODO: tsi does not have an items property yet..
@@ -205,7 +206,7 @@ namespace System.Windows.Forms
 				}
 			}
 
-			return (ToolStripItem[])al.ToArray ();
+			return list.ToArray ();
 		}
 
 		public int IndexOf (ToolStripItem value)
