@@ -1,3 +1,11 @@
+2009-07-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ToolStripItemCollection.cs: Use a List<> instead of an ArrayList in
+	Find. This should fix the exception we were getting when trying to
+	convert the ArrayList to an array of objects (since we were losing the
+	type parameter).
+	Fixes #519944.
+
 2009-07-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* RadioButton.cs: Setting Checked when none of the sibligs is checked
